# college-coursework

./: .gitignore  Cargo.toml  Makefile  launch.sh
.github/workflows/: main.yml
college-coursework/: Cargo.toml  README.md  build.rs  k2c-test.py  planets-api.py
college-coursework/assets/planets/: planets.toml
college-coursework/src/: args.rs  assets.rs  log.rs  main.rs  program.rs  setup.rs  test.rs  util.rs
college-coursework/src/models/: sphere.rs
college-coursework/src/panel/: formatters.rs  global.rs  help.rs  mod.rs  planet.rs  tab.rs  vector_ui.rs
college-coursework/src/renderer/: camera.rs  components.rs  instance.rs  light.rs  mod.rs  model.rs  state.rs  systems.rs  texture.rs  vertex.rs  window.rs
college-coursework/src/renderer/shaders/: light.wgsl  shader.wgsl
college-coursework/src/simulation/: components.rs  mod.rs  planets.rs  saves.rs  simulator.rs  util.rs
log-parser/: Cargo.toml
log-parser/src/: lib.rs  log.pest  main.rs
prettify-logs/: Cargo.toml
src/: args.rs  main.rs  program.rs  test.rs  util.rs
src/simulation/: components.rs  mod.rs  planets.rs  simulator.rs  util.rs
