[package]
name = "college-coursework"
version = "0.1.0"
authors = ["Joseph Hunt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
specs = { version = "0.17.0", features = ["derive"] }
tokio = { version = "1.18.2", features = ["time", "rt"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.5.9"
nalgebra = "0.31.0"
rayon = "1.5.3"
itertools = "0.10.3"
log = "0.4.17"
thiserror = "1.0.31"
lazy_static = "1.4.0"
clap = { version = "3.1.18", features = ["derive", "cargo"] }
fern = { version = "0.6.1", features = ["colored", "date-based"] }
chrono = "0.4.21"
error-stack = "0.1.1"
winit = "0.27.2"
const_format = "0.2.26"
bytemuck = { version = "1.12.1", features = ["derive"] }
image = "0.24.3"
cgmath = "0.18.0"
tobj = { version = "3.2.3", features = ["async"] }
anyhow = "1.0.57"
instant = "0.1.12"
bitflags = "1.3.2"
rodio = "0.15.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
puffin = "0.13.3"
puffin_egui = "0.16.0"
egui = "0.19.0"
egui-wgpu = "0.19.0"
egui-winit = "0.19.0"
egui_extras = { version = "0.19.0", features = ["datepicker"] }
dialog = "0.3.0"

[build-dependencies]
anyhow = "1.0.57"
fs_extra = "1.2.0"
glob = "0.3.0"


