[package]
name = "log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "log_parser"
path = "src/lib.rs"

[[bin]]
name = "prettify-logs"
path = "src/main.rs"

[dependencies]
chrono = "0.4.21"
clap = { version = "3.2.16", features = ["derive"] }
log = "0.4.17"
pest = "2.2.1"
pest_derive = "2.2.1"
strip-ansi-escapes = "0.1.1"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["io-std", "io-util", "sync", "rt", "macros", "rt-multi-thread"] }
